--- a/res/layout/activity_web.xml
+++ b/res/layout/activity_web.xml
@@ -20,4 +20,12 @@
             android:layout_below="@id/gif_title"
             android:contentDescription="@string/lol_image"
             />
+        
+        <ProgressBar
+	        android:id="@+id/loading"
+	        android:layout_width="50dp"
+	        android:layout_height="50dp"
+	        android:visibility="visible"
+	        android:layout_centerInParent="true"
+         />  
 </RelativeLayout>
