--- a/res/layout/footer_list_layout.xml
+++ b/res/layout/footer_list_layout.xml
@@ -1,7 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp"
+    android:background="@color/black_color">
     
     <Button 
         android:id="@+id/load_more_button"
@@ -10,6 +12,15 @@
         android:textSize="12sp"
         android:text="@string/load_more"
         android:background="@drawable/load_more_shape"
+        android:visibility="gone"
         />
+    
+    <ProgressBar
+	        android:id="@+id/loading"
+	        android:layout_width="25dp"
+	        android:layout_height="25dp"
+	        android:visibility="visible"
+	        android:layout_centerInParent="true"
+         />
 
 </RelativeLayout>
